Changelog
=========

0.2.1
-----

* Make iterations through a readonly list return readonly objects

0.2.0
-----

* Add missing files to git repository.
* Add working example and update readme. Upgrade version to 0.2.0.
* Put yet more into the base class.

0.1.7
-----

* Make it easier to create ``SuperMutables`` by adding a base class.
* Add instructions on how to extend supermutables
* Add CHANGELOG

0.1.6
-----

* Move class registration into utils

0.1.3
-----

* Release to pypi