@@ -1,0 +1,9 @@
+language: python
+python:
+  - "2.6"
+  - "2.7"
+  - "3.2"
+# command to install dependencies
+install: pip install -r test-requirements.txt
+# command to run tests
+script: nosetests
